; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/config/rs6000/extr_rs6000.c_extract_ME.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/config/rs6000/extr_rs6000.c_extract_ME.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @extract_ME(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i64 @INT_LOWPART(i32 %6)
  store i64 %7, i64* %5, align 8
  %8 = load i64, i64* %5, align 8
  %9 = and i64 %8, 1
  %10 = icmp eq i64 %9, 0
  br i1 %10, label %11, label %25

11:                                               ; preds = %1
  %12 = load i64, i64* %5, align 8
  %13 = and i64 %12, 4294967295
  %14 = call i32 @gcc_assert(i64 %13)
  store i32 30, i32* %4, align 4
  br label %15

15:                                               ; preds = %20, %11
  %16 = load i64, i64* %5, align 8
  %17 = lshr i64 %16, 1
  store i64 %17, i64* %5, align 8
  %18 = and i64 %17, 1
  %19 = icmp eq i64 %18, 0
  br i1 %19, label %20, label %23

20:                                               ; preds = %15
  %21 = load i32, i32* %4, align 4
  %22 = add nsw i32 %21, -1
  store i32 %22, i32* %4, align 4
  br label %15

23:                                               ; preds = %15
  %24 = load i32, i32* %4, align 4
  store i32 %24, i32* %2, align 4
  br label %45

25:                                               ; preds = %1
  %26 = load i64, i64* %5, align 8
  %27 = and i64 %26, 2147483648
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %33, label %29

29:                                               ; preds = %25
  %30 = load i64, i64* %5, align 8
  %31 = and i64 %30, 4294967295
  %32 = icmp eq i64 %31, 4294967295
  br i1 %32, label %33, label %34

33:                                               ; preds = %29, %25
  store i32 31, i32* %2, align 4
  br label %45

34:                                               ; preds = %29
  store i32 0, i32* %4, align 4
  br label %35

35:                                               ; preds = %40, %34
  %36 = load i64, i64* %5, align 8
  %37 = shl i64 %36, 1
  store i64 %37, i64* %5, align 8
  %38 = and i64 %37, 2147483648
  %39 = icmp ne i64 %38, 0
  br i1 %39, label %40, label %43

40:                                               ; preds = %35
  %41 = load i32, i32* %4, align 4
  %42 = add nsw i32 %41, 1
  store i32 %42, i32* %4, align 4
  br label %35

43:                                               ; preds = %35
  %44 = load i32, i32* %4, align 4
  store i32 %44, i32* %2, align 4
  br label %45

45:                                               ; preds = %43, %33, %23
  %46 = load i32, i32* %2, align 4
  ret i32 %46
}

declare dso_local i64 @INT_LOWPART(i32) #1

declare dso_local i32 @gcc_assert(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
